feat(kafka): Add Producer and Consumer